# linuxproginterface

./: .gitignore  CMakeLists.txt  README.md
fileio/: copy.c  seek_io.c  tee.c
